--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,277 @@
-.App {
-  text-align: center;
+/* body{
+ 
+} */
+
+/* .div_contenedor {
+  height: 100vh;
+} */
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(34, 124, 128);
+  padding: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imagen-nav {
+  width: 2rem;
+  height: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.carrito {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-items: center;
+  margin-right: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.descripcion {
   display: flex;
   flex-direction: column;
+  align-content: center;
+}
+
+.carrito h5 {
+  text-decoration: none !important;
+  font-weight: 600;
+  margin: 0;
+}
+
+.titulo {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-left: 5rem;
+}
+
+.titulo h5 {
+  text-decoration: none !important;
+  font-weight: 600;
+  margin: 0;
+}
+
+.active {
+  color: rgb(196, 131, 131);
+  text-decoration: none;
+}
+
+.active:hover {
+  color: rgb(196, 131, 131);
+  text-decoration: none;
+}
+
+.no-active {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+.imagen-boton {
+  width: 1.1rem;
+  height: 1.1rem;
+}
+.no-active:hover {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
+.btn {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.contenedor-pizza {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+  height: auto;
+  margin: auto;
+  margin-top: 5rem;
+}
+.card {
+  width: 17rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.carta {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin: 1rem;
 }
+
+ul {
+  margin: 0;
+}
+
+.precio {
+  text-align: center;
+}
+
+.ingredientes {
+  list-style: none;
+}
+
+.pizza-boton {
+  width: 0.8em;
+  height: 0.8em;
+}
+
+.contenedor-banner {
+  padding: 3rem;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../src/assets/pizzasfondo.jpeg");
+}
+
+.pizza-unique-contenedor {
+  border: 1px solid rgb(196, 196, 196);
+  width: 70rem;
+  margin: auto;
+}
+
+.carrito-vacío {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.botones button{
+  cursor: pointer;
+}
+
+.total-pagar{
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+ 
+}
+.eliminar-lista-total-pagar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.eliminar-compras{
+
+display: flex;
+justify-content: center;
+align-items: center;
+align-content: center;
+}
+
+.total-pagar button{
+  width: 10rem;
+}
+
+.carrito-vacío img {
+  width: 4rem;
+  height: 4rem;
+  cursor: pointer;
+}
+
+.detalle-contenedor {
+  background-color: rgb(233, 233, 233);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+  margin: auto;
+  border: 1px solid rgb(196, 196, 196);
+  padding: 3rem;
+}
+
+.detalle {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+.imagen-detalle {
+  width: 4em;
+  height: 3em;
+}
+
+.detalle ul {
+  list-style: none;
+}
+
+.detalle li {
+  padding: 2rem;
+}
+.detalle-compra {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.detalle-botones {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+.detalle-imagen-nombre {
+  display: flex;
+  flex-direction: row;
+
+  gap: 1rem;
+  align-items: center;
+}
+
+.card-title {
+  text-transform: capitalize;
+}
+
+.estaciones {
+  display: none;
+}
+
+.row-pizza {
+  display: flex;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.descripcion h5 {
+  text-transform: capitalize;
+}
+
+.foto-pizza {
+  width: 100%;
+  height: 100%;
+}
+.banner {
+  flex-direction: column;
+  display: flex;
+  height: 100%;
+  gap: 1rem;
+  align-items: center;
+
+  color: white;
+}
+.hr-banner {
+  width: 90%;
+  margin: auto;
+}
+
+.botones {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.precio-pizza-unique {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+/* #contenedor-pokebola{
+  background-image: url('../src/assets/pokeimagen3.png');
+  background-position:center;
+  
+  background-size: cover;
+
+} */
